--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   --spacing-pd-sm:2rem;
 
   --text-xxl:50px;  /* for tab 46px */
-  --text-xl:28px;  /* for tab 46px */
+  /* --text-xl:28px;  */
   --text-lg:1.125rem;
   --text-md:1rem;
   --text-sm:0.875rem; 
