--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --color-bg-card: #f5faff;  /* light mode card background */
   --color-bg-icon: #edf4ff;  /* light mode icon background */
   --color-txt-black:#000000;
-
+  --color-bg-blue:#0F71A8;
   --spacing-pd-lg:6rem;
   --spacing-pd-md:4rem;
   --spacing-pd-sm:2rem;
